samples/_failures_safe/1761268830_fa6e77_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3cae3544.c:159:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  159 | void print_compression_menu
      | ^~~~
